fix: button align and text color

--- a/src/style.css
+++ b/src/style.css
@@ -17,3 +17,6 @@ body {
   padding: 0;
   font-family: "Poppins", sans-serif;
 }
+span{
+  display: inline-flex;
+}
